--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,9 @@
 @import "main";
 @import "footer";
 @import "tienda";
+@import "IniciarSesion";
+@import "Descargas";
+@import "Registrar";
 @import "mediaQuery";
 
 /* para iniciar los estilos poner en ventana de comandos node: npm run watch-css 
