--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
   box-sizing: border-box; }
 
 body {
-  background-color: #f0f2f9; }
+  background-color: #f0f2f9;
+  line-height: 1; }
 
 #contairner_principal {
   /*width: 100%;*/
@@ -19,7 +20,8 @@ body {
   grid-template-areas: 'header header header' 'main main main' 'main main main' 'main main main' 'pie pie pie'; }
 
 #cabecera_principal {
-  background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);
+  /*background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);*/
+  background: linear-gradient(220.55deg, #FF0000 0%, #470000 100%);
   grid-area: header;
   display: flex;
   flex-direction: row;
@@ -83,19 +85,20 @@ body {
   padding: 0;
   margin: 0;
   /*background-color: rgb(255, 255, 255);*/
-  -webkit-box-shadow: -1px -30px 22px -15px rgba(203, 0, 143, 0.48);
-  -moz-box-shadow: -1px -30px 22px -15px rgba(203, 0, 143, 0.48);
-  box-shadow: -1px -30px 22px -15px rgba(203, 0, 143, 0.48);
+  /*-webkit-box-shadow: -1px -30px 22px -15px rgba(203,0,143,0.48);
+    -moz-box-shadow: -1px -30px 22px -15px rgba(203,0,143,0.48);
+    box-shadow: -1px -30px 22px -15px rgba(203,0,143,0.48);*/
   grid-area: main; }
   #container_main hr {
     border: 0;
     height: 0;
-    box-shadow: 0 1px 5px 1px purple;
+    /*box-shadow: 0 1px 5px 1px purple;*/
     margin: 0; }
   #container_main .primera_parte .precentacion {
     width: 100%;
     padding-top: 10px;
-    background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);
+    /*background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);*/
+    background: linear-gradient(220.55deg, #FF0000 0%, #470000 100%);
     display: flex; }
     #container_main .primera_parte .precentacion .precentacion_slogan {
       width: 60%;
@@ -118,19 +121,24 @@ body {
           font-family: 'Dancing Script', cursive;
           font-weight: 700; }
     #container_main .primera_parte .precentacion .precentacion_logotipo {
-      width: 40%; }
+      width: 40%;
+      padding: 10px 0; }
       #container_main .primera_parte .precentacion .precentacion_logotipo:hover {
         padding: 30px; }
-      #container_main .primera_parte .precentacion .precentacion_logotipo img:hover {
-        border-radius: 50%;
-        -webkit-border-radius: 50%;
-        box-shadow: 0px 0px 15px 15px #ec731e;
-        -webkit-box-shadow: 0px 0px 15px 15px #ec731e;
-        transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        transition: all .5s ease; }
+      #container_main .primera_parte .precentacion .precentacion_logotipo img {
+        background-color: #fff;
+        border-radius: 50%; }
+        #container_main .primera_parte .precentacion .precentacion_logotipo img:hover {
+          border-radius: 50%;
+          -webkit-border-radius: 50%;
+          box-shadow: 0px 0px 15px 15px #ec731e;
+          -webkit-box-shadow: 0px 0px 15px 15px #ec731e;
+          transform: rotate(360deg);
+          -webkit-transform: rotate(360deg);
+          transition: all .5s ease; }
   #container_main .primera_parte .plan_compra {
-    background-image: linear-gradient(to left, #3e0070, #63007b, #870084, #a9008a, #cb008f);
+    /*background-image: linear-gradient(to left, #3e0070, #63007b, #870084, #a9008a, #cb008f);*/
+    background-image: linear-gradient(to right, #ff0000, #f40607, #e90b0d, #de0f11, #d31314, #c31015, #b40e15, #a40d15, #8c0712, #74030f, #5d0109, #470000);
     max-width: 80%;
     min-height: 200px;
     margin: 20px auto;
@@ -303,8 +311,7 @@ body {
           margin: 0 auto; }
 
 #pie {
-  /*background-color: rgb(211, 43, 71);*/
-  background-color: #d32b47;
+  background-color: #1b1c36;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -312,12 +319,54 @@ body {
   display: flex;
   flex-direction: column; }
   #pie .pie_datos {
+    padding: 0 5%;
     display: flex;
-    justify-content: space-between; }
+    justify-content: space-between;
+    column-gap: 5%; }
+    #pie .pie_datos .pie_datos_lista {
+      /*background-color: #fff;*/ }
+      #pie .pie_datos .pie_datos_lista ul {
+        /*background-color: aquamarine;*/
+        height: 100%;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
+        #pie .pie_datos .pie_datos_lista ul li {
+          /*background-color: aqua;*/
+          margin: 20px 0 0 0; }
+          #pie .pie_datos .pie_datos_lista ul li:first-child {
+            font-weight: bold;
+            font-size: 1.2em;
+            color: #49b5fd; }
+          #pie .pie_datos .pie_datos_lista ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: .8em; }
+    #pie .pie_datos .pie_datos_info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      #pie .pie_datos .pie_datos_info p {
+        font-weight: bold;
+        font-size: 1.2em;
+        color: #49b5fd;
+        margin-top: 10%; }
+      #pie .pie_datos .pie_datos_info ol {
+        height: 50%;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
+        #pie .pie_datos .pie_datos_info ol li {
+          text-decoration: none;
+          color: #fff;
+          font-size: 1em;
+          margin-top: 5px; }
     #pie .pie_datos .ubicacion {
       padding: 10px; }
     #pie .pie_datos .ubicacion iframe {
-      width: 400px;
+      max-width: 400px;
       height: 400px;
       border: 0; }
   #pie .copy {
@@ -408,6 +457,282 @@ body {
           transform: scale(1.2);
           z-index: 1; }
 
+#main_Sesion {
+  background-color: #fff;
+  grid-area: main;
+  width: 100%;
+  max-width: 100%;
+  /*background-color: purple;*/
+  padding: 10px;
+  display: flex; }
+  #main_Sesion .divForm {
+    background-image: url(../img/bg_4.jpg);
+    background-size: cover;
+    width: 80%;
+    max-width: 80%;
+    height: 100vh;
+    margin: 3% 0;
+    border-radius: 6%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
+    #main_Sesion .divForm .precentacion {
+      width: 50%;
+      max-width: 60%; }
+      #main_Sesion .divForm .precentacion h1 {
+        color: #49b5fd;
+        margin-top: 30px;
+        font-weight: 900; }
+      #main_Sesion .divForm .precentacion span {
+        color: snow;
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba(255, 255, 255, 0.2);
+        padding: 5px; }
+    #main_Sesion .divForm .form_sesion {
+      /* background: #333;*/
+      width: 50%;
+      max-width: 40%;
+      height: 60%;
+      padding: 10px;
+      margin-top: 5%; }
+      #main_Sesion .divForm .form_sesion .formulario_sesion {
+        background-color: #fff;
+        max-width: 100%;
+        height: 100%;
+        padding: 20px 15px;
+        border-radius: 6%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px; }
+        #main_Sesion .divForm .form_sesion .formulario_sesion .btn {
+          margin-top: 30px; }
+  #main_Sesion .aside_Sesion {
+    width: 20%;
+    max-width: 20%;
+    height: auto;
+    /*background-color: rgb(245, 245, 245);*/
+    padding: 5px;
+    /*border: 2px solid rgb(209, 209, 215);*/
+    border-radius: 15px; }
+    #main_Sesion .aside_Sesion .titulo_aside {
+      font-size: 1.5em;
+      text-align: center;
+      color: #49b5fd;
+      font-family: 'Dancing Script', cursive; }
+    #main_Sesion .aside_Sesion hr {
+      width: 80%;
+      margin: 0 auto;
+      height: 3px;
+      background: #9e9ea0; }
+    #main_Sesion .aside_Sesion .divs_aside {
+      padding: 5px;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      #main_Sesion .aside_Sesion .divs_aside .div_contenido {
+        width: 80%;
+        min-height: 300px;
+        border: 1px solid #333;
+        border-radius: 6%;
+        margin-bottom: 15px;
+        -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+        box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+        display: flex;
+        flex-direction: column; }
+        #main_Sesion .aside_Sesion .divs_aside .div_contenido h3 {
+          /*background-color: #fff;*/
+          font-size: 1em;
+          text-align: center;
+          border-radius: 6%;
+          margin-top: 10px; }
+        #main_Sesion .aside_Sesion .divs_aside .div_contenido img {
+          width: 100%;
+          max-width: 100%;
+          border-radius: 0 0 6% 6%;
+          object-fit: cover;
+          padding: 0 2px; }
+        #main_Sesion .aside_Sesion .divs_aside .div_contenido p {
+          width: 100%;
+          text-align: justify;
+          word-wrap: break-word;
+          padding: 0 5px;
+          font-size: .8em;
+          margin-top: 15px;
+          margin-bottom: 10; }
+        #main_Sesion .aside_Sesion .divs_aside .div_contenido span {
+          text-align: center;
+          padding: 10px 0; }
+          #main_Sesion .aside_Sesion .divs_aside .div_contenido span a {
+            text-decoration: none;
+            font-size: 1em; }
+
+#main_descargas {
+  grid-area: main;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around; }
+  #main_descargas .cont_principal {
+    width: 70%; }
+    #main_descargas .cont_principal .membresias .membresias_div {
+      width: 80%;
+      max-width: 80%;
+      margin: 0 auto; }
+      #main_descargas .cont_principal .membresias .membresias_div .card-footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around; }
+        #main_descargas .cont_principal .membresias .membresias_div .card-footer a {
+          text-decoration: none;
+          color: #49b5fd; }
+    #main_descargas .cont_principal .tablas_container {
+      margin-top: 100px;
+      display: flex;
+      flex-direction: column;
+      row-gap: 25px; }
+      #main_descargas .cont_principal .tablas_container .table_contenedor .contenido_desc {
+        border-left: 5px solid #1b1c36;
+        padding-left: 10px; }
+        #main_descargas .cont_principal .tablas_container .table_contenedor .contenido_desc h5 {
+          border-bottom: 5px solid #282a7a;
+          width: 150px; }
+        #main_descargas .cont_principal .tablas_container .table_contenedor .contenido_desc p {
+          text-align: justify; }
+      #main_descargas .cont_principal .tablas_container .table_contenedor .tabla h6 {
+        padding: 10px 0;
+        color: #333;
+        background: cyan;
+        text-align: center;
+        font-weight: 700;
+        border-radius: 10px; }
+  #main_descargas aside {
+    width: 20%;
+    /*background: red;*/ }
+    #main_descargas aside .novedades {
+      padding: 10px 0; }
+      #main_descargas aside .novedades h2 {
+        padding: 5px;
+        text-align: center;
+        color: #49b5fd;
+        font-weight: 600; }
+      #main_descargas aside .novedades .divs_novedades .card {
+        margin: 10px auto; }
+    #main_descargas aside .comentarios .div_comentarios .card {
+      margin: 10px auto; }
+      #main_descargas aside .comentarios .div_comentarios .card .card-body a {
+        text-decoration: none; }
+
+#main_Registrar {
+  background-color: #fff;
+  grid-area: main;
+  width: 100%;
+  max-width: 100%;
+  /*background-color: purple;*/
+  padding: 10px;
+  display: flex; }
+  #main_Registrar .divForm {
+    background-image: url(../img/bg_5.jpg);
+    background-size: cover;
+    width: 80%;
+    max-width: 80%;
+    height: 100vh;
+    margin: 3% 0;
+    border-radius: 6%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
+    #main_Registrar .divForm .precentacion {
+      width: 50%;
+      max-width: 60%; }
+      #main_Registrar .divForm .precentacion h1 {
+        color: #49b5fd;
+        margin-top: 30px;
+        font-weight: 900; }
+      #main_Registrar .divForm .precentacion span {
+        color: snow;
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba(255, 255, 255, 0.2);
+        padding: 5px; }
+    #main_Registrar .divForm .form_sesion {
+      /* background: #333;*/
+      width: 50%;
+      max-width: 40%;
+      height: 70%;
+      padding: 10px;
+      margin-top: 5%; }
+      #main_Registrar .divForm .form_sesion .formulario_sesion {
+        background-color: #fff;
+        max-width: 100%;
+        height: 100%;
+        padding: 20px 15px;
+        border-radius: 6%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px; }
+        #main_Registrar .divForm .form_sesion .formulario_sesion .btn {
+          margin-top: 30px; }
+  #main_Registrar .aside_Sesion {
+    width: 20%;
+    max-width: 20%;
+    height: auto;
+    /*background-color: rgb(245, 245, 245);*/
+    padding: 5px;
+    /*border: 2px solid rgb(209, 209, 215);*/
+    border-radius: 15px; }
+    #main_Registrar .aside_Sesion .titulo_aside {
+      font-size: 1.5em;
+      text-align: center;
+      color: #49b5fd;
+      font-family: 'Dancing Script', cursive; }
+    #main_Registrar .aside_Sesion hr {
+      width: 80%;
+      margin: 0 auto;
+      height: 3px;
+      background: #9e9ea0; }
+    #main_Registrar .aside_Sesion .divs_aside {
+      padding: 5px;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      #main_Registrar .aside_Sesion .divs_aside .div_contenido {
+        width: 80%;
+        min-height: 300px;
+        border: 1px solid #333;
+        border-radius: 6%;
+        margin-bottom: 15px;
+        -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+        box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+        display: flex;
+        flex-direction: column; }
+        #main_Registrar .aside_Sesion .divs_aside .div_contenido h3 {
+          /*background-color: #fff;*/
+          font-size: 1em;
+          text-align: center;
+          border-radius: 6%;
+          margin-top: 10px; }
+        #main_Registrar .aside_Sesion .divs_aside .div_contenido img {
+          width: 100%;
+          max-width: 100%;
+          border-radius: 0 0 6% 6%;
+          object-fit: cover;
+          padding: 0 2px; }
+        #main_Registrar .aside_Sesion .divs_aside .div_contenido p {
+          width: 100%;
+          text-align: justify;
+          word-wrap: break-word;
+          padding: 0 5px;
+          font-size: .8em;
+          margin-top: 15px;
+          margin-bottom: 10; }
+        #main_Registrar .aside_Sesion .divs_aside .div_contenido span {
+          text-align: center;
+          padding: 10px 0; }
+          #main_Registrar .aside_Sesion .divs_aside .div_contenido span a {
+            text-decoration: none;
+            font-size: 1em; }
+
 /* 
     * modelado responsivo 
 */
@@ -472,7 +797,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
     #cabecera_principal .menu_principal {
       display: none; }
     #cabecera_principal .navbar {
-      background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);
+      background: linear-gradient(220.55deg, #FF0000 0%, #470000 100%);
       display: flex;
       max-width: 100%;
       height: auto; }
@@ -601,7 +926,8 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
         max-width: 50%;
         float: right; }
         #pie .pie_datos .pie_datos_info p {
-          max-width: 100%; }
+          max-width: 100%;
+          margin-top: 0; }
         #pie .pie_datos .pie_datos_info ol {
           max-width: 100%;
           padding-left: 0; }
