--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,21 +1,84 @@
 #pie {
-    /*background-color: rgb(211, 43, 71);*/
-    @include contenedorPrimario(rgb(211, 43, 71));
+    @include contenedorPrimario(rgb(27,28,54));
     grid-area: pie;
     display:flex;
     flex-direction: column;
 
 
     .pie_datos{
+        padding: 0 5%;
+
         display: flex;
         justify-content: space-between;
+        column-gap: 5%;
+
+        .pie_datos_lista{
+            /*background-color: #fff;*/
+
+            ul{
+                /*background-color: aquamarine;*/
+                height: 100%;
+                list-style: none;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            
+                li{
+                    /*background-color: aqua;*/
+                    margin: 20px 0 0 0;
+
+                    &:first-child{
+                        font-weight: bold;
+                        font-size: 1.2em;
+                        color: rgb(73, 181, 253);
+                    }
+                    a{
+                        text-decoration: none; 
+                        color: #fff; 
+                        font-size: .8em;
+                    }
+                }
+            }
+        }
+
+        .pie_datos_info{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            
+
+            p{
+                font-weight: bold;
+                font-size: 1.2em;
+                color: rgb(73, 181, 253);
+
+                margin-top: 10%;
+            }
+
+            ol{
+                height: 50%;
+                list-style: none;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                
+                li{
+                    text-decoration: none; 
+                    color: #fff; 
+                    font-size: 1em;
+                    margin-top: 5px;
+                }
+            }
+        }
 
         .ubicacion{
             padding: 10px;
         }
     
         .ubicacion iframe{
-            width: 400px;
+            max-width: 400px;
             height: 400px;
             border: 0;
         }
