--- a/scss/mediaQuery.scss
+++ b/scss/mediaQuery.scss
@@ -348,7 +348,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
         }
 
         .navbar{
-            background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);
+            background: linear-gradient(220.55deg, #FF0000 0%, #470000 100%);
             display: flex;
             max-width: 100%;
             height: auto;
@@ -691,6 +691,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
 
                 ul{
                     li{
+                        
                         a{
                             font-size: .7em;
                         }
@@ -704,6 +705,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
 
                 p{
                     max-width: 100%;
+                    margin-top: 0;
                 }
 
                 ol{
