--- a/css/style.css
+++ b/css/style.css
@@ -400,12 +400,111 @@ body {
           height: 50px;
           cursor: pointer; }
   .main_tienda .tienda_contenido {
+    height: auto;
     margin-bottom: 100px;
     display: flex; }
-    .main_tienda .tienda_contenido aside {
+    .main_tienda .tienda_contenido .menu_galeria {
       width: 20%;
-      background: coral;
-      margin-right: 5rem; }
+      background: #212529;
+      margin-right: 5rem;
+      padding: 10px 0 10px 10px;
+      display: flex;
+      flex-direction: column;
+      column-gap: 5px; }
+      .main_tienda .tienda_contenido .menu_galeria hr {
+        background: #9ea3a8;
+        width: 95%;
+        height: 2px;
+        float: left; }
+      .main_tienda .tienda_contenido .menu_galeria .categorias h3 {
+        color: #fff;
+        font-size: 1.5em;
+        font-weight: 900;
+        padding: 25px 0;
+        text-align: center;
+        margin-right: 10px; }
+        .main_tienda .tienda_contenido .menu_galeria .categorias h3 svg {
+          width: 30px;
+          height: 30px;
+          margin-right: 5px; }
+          .main_tienda .tienda_contenido .menu_galeria .categorias h3 svg path {
+            color: #d70000; }
+      .main_tienda .tienda_contenido .menu_galeria .categorias ul {
+        width: 100%;
+        padding-left: 0; }
+        .main_tienda .tienda_contenido .menu_galeria .categorias ul li {
+          color: #fff;
+          padding: 10px 0 10px 2em;
+          list-style: none; }
+          .main_tienda .tienda_contenido .menu_galeria .categorias ul li svg {
+            width: 20px;
+            height: 20px;
+            margin-right: 3px; }
+          .main_tienda .tienda_contenido .menu_galeria .categorias ul li:hover {
+            border-top: 1px solid #fff;
+            border-bottom: 1px solid #fff;
+            border-right: 8px solid #653bdd;
+            background: rgba(101, 59, 221, 0.2); }
+      .main_tienda .tienda_contenido .menu_galeria .filtros h3 {
+        color: #fff;
+        font-size: 1.5em;
+        font-weight: 900;
+        padding: 25px 0;
+        text-align: center;
+        margin-right: 10px; }
+        .main_tienda .tienda_contenido .menu_galeria .filtros h3 svg {
+          width: 30px;
+          height: 30px;
+          margin-right: 5px; }
+          .main_tienda .tienda_contenido .menu_galeria .filtros h3 svg path {
+            color: #d70000; }
+      .main_tienda .tienda_contenido .menu_galeria .filtros .form_filtro {
+        width: 90%;
+        max-width: 90%; }
+        .main_tienda .tienda_contenido .menu_galeria .filtros .form_filtro form {
+          margin-left: 2em; }
+          .main_tienda .tienda_contenido .menu_galeria .filtros .form_filtro form .dinero_monto {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
+            row-gap: 5px; }
+            .main_tienda .tienda_contenido .menu_galeria .filtros .form_filtro form .dinero_monto label {
+              margin-right: 3px; }
+            .main_tienda .tienda_contenido .menu_galeria .filtros .form_filtro form .dinero_monto input {
+              margin-left: 2px; }
+          .main_tienda .tienda_contenido .menu_galeria .filtros .form_filtro form div label {
+            color: #fff; }
+      .main_tienda .tienda_contenido .menu_galeria .masBuscados h3 {
+        color: #fff;
+        font-size: 1.5em;
+        font-weight: 900;
+        padding: 25px 0;
+        text-align: center;
+        margin-right: 10px; }
+        .main_tienda .tienda_contenido .menu_galeria .masBuscados h3 svg {
+          width: 30px;
+          height: 30px;
+          margin-right: 5px; }
+          .main_tienda .tienda_contenido .menu_galeria .masBuscados h3 svg path {
+            color: #d70000; }
+      .main_tienda .tienda_contenido .menu_galeria .masBuscados ol {
+        width: 100%;
+        padding-left: 0; }
+        .main_tienda .tienda_contenido .menu_galeria .masBuscados ol li {
+          color: #fff;
+          padding: 10px 0 10px 2em;
+          list-style: none; }
+          .main_tienda .tienda_contenido .menu_galeria .masBuscados ol li svg {
+            width: 20px;
+            height: 20px;
+            margin-right: 3px; }
+          .main_tienda .tienda_contenido .menu_galeria .masBuscados ol li:hover {
+            border-top: 1px solid #fff;
+            border-bottom: 1px solid #fff;
+            border-right: 8px solid #653bdd;
+            background: rgba(101, 59, 221, 0.2); }
     .main_tienda .tienda_contenido #galeria {
       width: 70%;
       padding: 5px;
