--- a/scss/Descargas.scss
+++ b/scss/Descargas.scss
@@ -91,6 +91,13 @@
 
         .comentarios{
 
+            h2{
+                padding: 5px;
+                text-align: center;
+                color: rgb(73, 181, 253);
+                font-weight: 600;
+            }
+
             .div_comentarios{
 
                 .card{
