--- a/scss/tienda.scss
+++ b/scss/tienda.scss
@@ -8,6 +8,7 @@
         min-height: 200px;
         margin: 50px auto;
         border: 3px solid #333;
+        position: relative;
     
         display: flex;
         flex-direction: row;
@@ -17,17 +18,20 @@
         .buscador_form{
             border: 2px solid red;
             display: flex;
+        }
 
-            .carrito{
-                display: flex;
-                align-items: center;
-                margin: 0 5px;
+        .carrito{
+            display: flex;
+            align-items: center;
+            margin: 0 5px;
+            position: absolute;
+            top: 0;
+            right: 0;
 
-                img{
-                    width: 50px;
-                    height: 50px;
-                    cursor: pointer;
-                }
+            img{
+                width: 50px;
+                height: 50px;
+                cursor: pointer;
             }
         }
     }
