--- a/scss/tienda.scss
+++ b/scss/tienda.scss
@@ -246,7 +246,7 @@
                 }
 
                 .nom_prod {
-                    width: 5em;
+                    width: auto;
                     font-weight: 600;
                     background-image: linear-gradient(to right, #ffffff, #dad8f7, #afb4f0, #7a93e9, #0f75e2);
                     padding: 5px;
