--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,26 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        align-items: center; }
+        align-items: center;
+        padding-left: 0; }
         #cabecera_principal .logotipo_principal .redes_sociales ul li {
-          list-style: none; }
+          list-style: none;
+          width: 30%;
+          text-align: center;
+          margin-left: 5px; }
           #cabecera_principal .logotipo_principal .redes_sociales ul li a {
-            display: inline-block;
-            text-decoration: none; }
+            background-color: #333;
+            border-radius: 50%;
+            width: 100%;
+            height: auto;
+            padding: 10px; }
+            #cabecera_principal .logotipo_principal .redes_sociales ul li a svg {
+              width: 25px;
+              height: 25px;
+              background-color: #fff;
+              border-radius: 50%; }
+            #cabecera_principal .logotipo_principal .redes_sociales ul li a .bi-whatsapp {
+              color: #34ae34; }
   #cabecera_principal .menu_principal {
     width: 50%;
     height: 3em;
@@ -547,7 +561,7 @@ body {
               background-color: #0f75e2;
               color: #ffffff; }
         .main_tienda .tienda_contenido #galeria .galeria_articulo .nom_prod {
-          width: 5em;
+          width: auto;
           font-weight: 600;
           background-image: linear-gradient(to right, #ffffff, #dad8f7, #afb4f0, #7a93e9, #0f75e2);
           padding: 5px;
@@ -963,7 +977,6 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
       #container_main .primera_parte .slide button .carousel-control-prev-icon {
         background-color: #555555; }
     #container_main .segunda_parte .colaboradores .colaboradores_targetas {
-      background-image: linear-gradient(to top, #222343, #2c3567, #31498e, #2d5eb7, #0f75e2);
       max-width: 100%;
       display: flex;
       flex-direction: column;
@@ -974,26 +987,32 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
         justify-content: center;
         align-items: center;
         max-width: 80%;
-        min-height: 350px;
-        margin: 0 auto; }
+        height: auto;
+        margin: 0 auto;
+        row-gap: 20px; }
         #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem .seguir {
-          top: 300px;
-          left: 220px; }
+          top: initial;
+          left: initial;
+          right: 38%;
+          bottom: 0;
+          margin-bottom: 5px; }
           #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem .seguir:hover {
-            top: 250px;
-            left: 220px; }
+            top: initial;
+            left: initial;
+            right: 38%;
+            bottom: 0; }
         #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem img {
           min-width: 70%;
-          min-height: 400px;
-          margin: auto 20px;
-          border-radius: 25% 0 25% 0; }
+          height: auto;
+          border-radius: 25% 0 25% 0;
+          object-fit: cover; }
         #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem .div_p {
           display: block;
-          max-width: 60%;
-          padding-top: 30px; }
+          max-width: 90%;
+          margin-top: 5px; }
           #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem .div_p p {
             text-align: justify;
-            font-size: 1.3rem;
+            font-size: .9rem;
             /* &:nth-last-child(3){
                                     width: 35%;
                                 }*/ }
@@ -1005,9 +1024,9 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
       justify-content: center;
       align-items: center; }
       #container_main .segunda_parte .nosotros_principal .nosotros_p div {
-        max-width: 50%; }
+        max-width: 80%; }
         #container_main .segunda_parte .nosotros_principal .nosotros_p div iframe {
-          max-width: 100%;
+          width: 100%;
           height: 300px; }
     #container_main .correo .form_c {
       /* contenedor formulario principal sin titulo  */
