--- a/scss/mediaQuery.scss
+++ b/scss/mediaQuery.scss
@@ -509,7 +509,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
                 }
     
                 .colaboradores_targetas{
-                    background-image: linear-gradient(to top, #222343, #2c3567, #31498e, #2d5eb7, #0f75e2);
+                    //background-image: linear-gradient(to top, #222343, #2c3567, #31498e, #2d5eb7, #0f75e2);
                     max-width: 100%;
                     display: flex;
                     flex-direction: column;
@@ -521,32 +521,39 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
                         justify-content: center;
                         align-items: center;
                         max-width: 80%;
-                        min-height: 350px;
+                        height: auto;
                         margin: 0 auto;
+                        row-gap: 20px;
                         
                         .seguir{
-                            top: 300px;
-                            left: 220px;
+                                top: initial;
+                                left: initial;
+                                right: 38%;
+                                bottom: 0;
+                                margin-bottom: 5px;
                             &:hover{
-                                top: 250px;
-                                left: 220px;
+                                top: initial;
+                                left: initial;
+                                right: 38%;
+                                bottom: 0;
                             }
                         }
                         
                         img{
                             min-width: 70%;
-                            min-height: 400px;
-                            margin: auto 20px;
+                            height: auto;
+                            //margin: auto 20px;
                             border-radius: 25% 0 25% 0;
+                            object-fit: cover;
                         }
     
                         .div_p{
                             display: block;
-                            max-width: 60%;
-                            padding-top: 30px;
+                            max-width: 90%;
+                            margin-top: 5px;
                             p{
                                 text-align: justify;
-                                font-size: 1.3rem;
+                                font-size: .9rem;
                                 /* &:nth-last-child(3){
                                     width: 35%;
                                 }*/
@@ -580,10 +587,10 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
             
     
                     div{
-                        max-width: 50%;
+                        max-width: 80%;
                         
                         iframe{
-                            max-width: 100%;
+                            width: 100%;
                             height: 300px;
                         }
     
