--- a/scss/header.scss
+++ b/scss/header.scss
@@ -118,6 +118,34 @@ body{
             padding: 8px;
             margin-left: 20px;
 
+            #btn_carrito{
+                background: purple;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .bi-cart4{
+                    margin-right: 3px;
+                }
+
+                #cantidadCarrito{
+                    background-color: #fff;
+                    height: 20px;
+                    border-radius: 50%;
+                    border: 1px solid #333;
+                    color: rgb(0, 0, 0);
+                    padding: 5px;
+                    font-family:'Times New Roman', Times, serif;
+                    font-weight: bold;
+                    margin-left: 10px;
+
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+
             &:hover{
                 border-bottom: 2px solid #47b4fd;
                 cursor: pointer;
